[gd_scene load_steps=4 format=3 uid="uid://mfmvocvk73l0"]

[ext_resource type="Script" uid="uid://btdwlvmw6ikbk" path="res://main_menu.gd" id="1_i26rj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i26rj"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eiy7p"]
font_color = Color(0.8150196, 3.5857408e-06, 7.70092e-07, 1)

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("AreYouSure")]
script = ExtResource("1_i26rj")
AreYouSure = NodePath("Panel/Panel/AreYouSure")

[node name="Panel" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 80.0
offset_right = 338.0
offset_bottom = 251.0

[node name="LoadGame" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="NewGame" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="Settings" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitGame" type="Button" parent="Panel/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="AreYouSure" type="Panel" parent="Panel/Panel"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = -1.0000153
offset_right = 105.5837
offset_bottom = 78.20865
scale = Vector2(11.073171, 8.193548)
theme_override_styles/panel = SubResource("StyleBoxFlat_i26rj")

[node name="Label" type="Label" parent="Panel/Panel/AreYouSure"]
layout_mode = 0
offset_left = 31.42731
offset_top = 15.500001
offset_right = 136.4273
offset_bottom = 38.5
scale = Vector2(0.37589929, 0.5283019)
text = "Are you sure?"
label_settings = SubResource("LabelSettings_eiy7p")

[node name="Confirm" type="Button" parent="Panel/Panel/AreYouSure"]
layout_mode = 0
offset_left = 35.310577
offset_top = 39.177166
offset_right = 106.31058
offset_bottom = 79.17717
scale = Vector2(0.19881245, 0.19625792)
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Confirm"

[node name="Cancel" type="Button" parent="Panel/Panel/AreYouSure"]
layout_mode = 0
offset_left = 55.268723
offset_top = 39.05512
offset_right = 115.26874
offset_bottom = 79.05513
scale = Vector2(0.2030272, 0.18962131)
theme_override_colors/font_color = Color(0, 0.64808863, 0.16110143, 1)
text = "Cancel"

[connection signal="pressed" from="Panel/Panel/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/Panel/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="Panel/Panel/AreYouSure/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Panel/Panel/AreYouSure/Cancel" to="." method="_on_cancel_pressed"]
